--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
   "author": "wqsz7xn <wqsz7xn@protonmail.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.24.0",
     "simple-git": "^2.48.0",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "@types/node": "^14.17.32"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^14.17.32",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7"
   },
   "scripts": {
     "build": "tsc",
-    "start": "node ./lib/index.js"
+    "start": "node ./lib/index.js",
+    "test": "jest"
   }
 }
