move source files out of root, fix packing issues

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-/*
-!/.github/
+*
+!.github/
 !.gitignore
 !.npmignore
 !.prettierrc
-!index.spec.ts
-!index.ts
+!src/
+!src/index.ts
+!src/index.spec.ts
+!src/templates.spec.ts
+!src/templates.ts
 !package.json
 !tsconfig.json
-!templates.spec.ts
-!templates.ts
 !yarn.lock
 !jest.config.js
 !README.md
