--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 !src/
 !src/index.ts
 !src/index.spec.ts
-!src/templates.spec.ts
-!src/templates.ts
+!templates.json
 !package.json
 !tsconfig.json
 !yarn.lock
