--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "author": "wqsz7xn <wqsz7xn@protonmail.com>",
   "license": "MIT",
   "dependencies": {
-    "simple-git": "^2.48.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^14.17.32",
     "jest": "^27.3.1",
-    "ts-jest": "^27.0.7"
+    "ts-jest": "^27.0.7",
+    "simple-git": "^2.48.0"
   },
   "files": [
     "package.json",
     "src/index.ts",
-    "src/templates.ts",
     "tsconfig.json",
     "README.md"
   ],
