remove everything, port other code to monorepo so that we don't need this as a dependency

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 !.github/
 !.gitignore
 !.prettierrc
-!src/
-!src/index.ts
-!src/index.spec.ts
+!test/
+!test/index.spec.ts
 !templates.json
 !package.json
 !tsconfig.json
