--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,12 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-      - run: yarn
-      - name: build
-        run: yarn build
-      - name: test
-        run: yarn test
+      - name: unique
+        run: |
+          set -xo pipefail
+          x=$(jq 'map(.name + .branch + .specVersion)' templates.json)
+          y=$(jq 'length' <<< "$x")
+          z=$(jq 'unique | length' <<< "$x")
+          [ $y == $z ]
