New Template Structure

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,20 +1,13 @@
-name: test
-on:
-  push:
-    branches:
-    - main
-  pull_request:
-    branches:
-    - main
+name: Convert TypeScript to JSON
+
 jobs:
-  test:
-    name: test
+  publish_json:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: unique
-        run: |
-          x=$(jq 'map(.name + .network + .branch + .specVersion)' templates.json)
-          y=$(jq 'length' <<< "$x")
-          z=$(jq 'unique | length' <<< "$x")
-          [ $y == $z ]
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install --save ts-to-json
+      - name: Convert TypeScript to JSON
+        run: ./node_modules/.bin/ts-to-json --path 'network-list.ts' --type 'NetworkFamilies'
