--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: npm install --save ts-to-json
-      - name: Convert TypeScript to JSON
-        run: ./node_modules/.bin/ts-to-json --path 'network-list.ts' --type 'NetworkFamilies'
+        run: npm install
+      - name: Build and Deploy
+        run: npm run build && npm run start
