--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,20 +1,28 @@
-name: test
+name: Convert TypeScript to JSON
 on:
   push:
     branches:
-    - main
+      - main
   pull_request:
     branches:
-    - main
+      - main
 jobs:
-  test:
-    name: test
+  publish_json:
     runs-on: ubuntu-latest
+    if: "!startsWith(github.event.head_commit.message, '[SKIP CI]') && github.repository == 'subquery/templates'"
+
     steps:
-      - uses: actions/checkout@v2
-      - name: unique
-        run: |
-          x=$(jq 'map(.name + .network + .branch + .specVersion)' templates.json)
-          y=$(jq 'length' <<< "$x")
-          z=$(jq 'unique | length' <<< "$x")
-          [ $y == $z ]
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+      - name: Install dependencies
+        run: npm install
+      - name: Build and Deploy
+        run: npm run build && npm run start
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: '[SKIP CI] update output'
+        env:
+          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }}
