--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/subquery/templates#readme",
   "dependencies": {
     "https-proxy-agent": "^7.0.5",
-    "node-fetch": "^2"
+    "node-fetch": "^2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.5.1",
     "@types/node-fetch": "^2.6.11",
+    "@types/yargs": "^17.0.33",
     "ts-node": "^10.9.1",
     "ts-to-json": "^1.8.3",
     "typescript": "^5.1.6"
